# Inferyx

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  inferyx.py  prometheus.yaml  prometheus.yml  pyproject.toml  requirements.txt  startup.sh
api/: auth.py  main.py  schema.py
batch/: batching_engine.py
caching/: cache_inference.py
config/: config.py
grafana-provisioning/: dashboards.yaml
grafana-provisioning/dashboards/: Inferyx-1750178522067.json
job_queue/: job_store.py  producer.py  redis_client.py  schema.py  utils.py
metrics/: metrics.py  serve.py
model/: FABSA.py  infer.py  test_infer.py
retry/: retry.py  retry_worker.py  utils.py
workers/: worker_loop.py  worker_pool.py
