[project]
name = "inferyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]
