[project]
name = "inferyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "matplotlib>=3.10.3",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "optimum>=1.25.3",
    "pandas>=2.3.0",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.13.0",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]
